Blacklist Mali-4* on Linux for accelerated 2d canvas

Accelerated canvas is slow with this GPU on Linux.  Blacklist for
now.

BUG=691601
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2697613002
Cr-Commit-Position: refs/heads/master@{#450060}

Former-commit-id: 1ffa882da6a9795878cbdd6bba4542d0158298a9